Fix PUBLIC to PRIVATE and add headers to link

--- a/engine-lib/CMakeLists.txt
+++ b/engine-lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(engine-lib STATIC Server.cpp Client.cpp)
+add_library(engine-lib STATIC Server.cpp Server.h Client.cpp Client.h)
 
 target_include_directories(engine-lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
                           
