--- a/net-stat/CMakeLists.txt
+++ b/net-stat/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(net-stat Program.cpp)
 
-target_link_libraries(net-stat PUBLIC engine-lib)
+target_link_libraries(net-stat PRIVATE engine-lib)
 
