grouped headers and sources: Set(Headers), Set(Sources), Set(PROJECT_CONTENT)

--- a/engine-lib/CMakeLists.txt
+++ b/engine-lib/CMakeLists.txt
@@ -1,4 +1,18 @@
-add_library(engine-lib STATIC Server.cpp Server.h Client.cpp Client.h)
+set(HEADERS
+Client.h
+Server.h
+)
+
+set(SOURCES
+Client.cpp
+Server.cpp
+)
+
+set(PROJECT_CONTENT
+${SOURCES} ${HEADERS}
+)
+
+add_library(engine-lib STATIC ${PROJECT_CONTENT})
 
 target_include_directories(engine-lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
                           
