--- a/net-stat/CMakeLists.txt
+++ b/net-stat/CMakeLists.txt
@@ -1,4 +1,15 @@
-add_executable(net-stat Program.cpp)
+set(HEADERS
+)
+
+set(SOURCES
+Program.cpp
+)
+
+set(PROJECT_CONTENT
+${SOURCES} ${HEADERS}
+)
+
+add_executable(net-stat ${PROJECT_CONTENT})
 
 target_link_libraries(net-stat PRIVATE engine-lib)
 
