--- a/engine-lib/CMakeLists.txt
+++ b/engine-lib/CMakeLists.txt
@@ -21,5 +21,7 @@ ${SOURCES} ${HEADERS}
 
 add_library(engine-lib STATIC ${PROJECT_CONTENT})
 
+find_package(Boost REQUIRED)
+
 target_include_directories(engine-lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} PRIVATE ${Boost_INCLUDE_DIR})
                           
