Libs and defenitions search in upper CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,20 @@ project(MyProject VERSION 1.0)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(BoostDefenitions
+-DBOOST_DATE_TIME_NO_LIB
+-DBOOST_REGEX_NO_LIB
+)
+add_definitions(${BoostDefenitions})
+
+set(Boost_USE_STATIC_LIBS ON)
+find_package(Boost REQUIRED COMPONENTS 
+program_options
+thread
+)
+
+find_package(Catch2 REQUIRED)
+
 add_subdirectory(tests)
 add_subdirectory(engine-lib)
 add_subdirectory(net-stat)
